// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package secure_aggregation.willow;

option java_multiple_files = true;
option java_outer_classname = "CommonProto";

// The configuration of the aggregation as a proto.
message AggregationConfigProto {
  map<string, VectorConfig> vector_configs = 1;
  int64 max_decryptor_dropouts = 2;
  int64 max_number_of_clients = 3;
  string session_id = 4;
}

// The configuration for a single vector in an aggregation.
message VectorConfig {
  int64 length = 1;
  int64 bound = 2;
}

message KeyGenRequest {}

message KeyGenResponse {
  AggregationKey aggregation_key = 1;
}
message AggregationKey {
  // The key used for aggregation will take number 1 here.
  reserved 1;
}

/// The total contribution from the client.
message Contribution {
  ContributionToServer contribution_to_server = 1;
  ContributionToVerifier contribution_to_verifier = 2;
}

/// The contribution from the client to the server.
message ContributionToServer {}

/// The contribution from the client to the verifier.
message ContributionToVerifier {}

message VerificationRequest {
  repeated ContributionToVerifier contributions = 1;
}

message VerificationResponse {
  repeated bool is_valid = 1;
}

message VerificationSummaryRequest {}

message VerificationSummaryResponse {
  DecryptionRequest decryption_request = 1;
}

/// The request from the verifier to the decryptor to decrypt the aggregate.
message DecryptionRequest {}

message DecryptionResponse {}

/// This is unimplemented for the single decryptor version
message DropoutRecoveryRequest {}
